# steq

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  e2e.yml  release.yml
apps/desktop/: index.html  package.json  wdio.conf.js
apps/desktop/e2e/: app-startup.e2e.js  collections.e2e.js  request-editor.e2e.js  tabs.e2e.js
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: collection_cmd.rs  environment_cmd.rs  history_cmd.rs  io_cmd.rs  mod.rs  request_cmd.rs  workspace_cmd.rs
apps/desktop/src-tauri/src/crypto/: mod.rs
apps/desktop/src-tauri/src/db/: mod.rs  schema.rs
apps/desktop/src-tauri/src/db/repository/: collection_repo.rs  environment_repo.rs  history_repo.rs  mod.rs  request_repo.rs  workspace_repo.rs
apps/desktop/src-tauri/src/http/: executor.rs
apps/desktop/src-tauri/src/io/: postman.rs
apps/desktop/src-tauri/src/models/: collection.rs  environment.rs  execution.rs  history.rs  mod.rs  request.rs  workspace.rs
apps/desktop/src/components/layout/: AppShell.tsx
apps/desktop/src/components/ui/: KeyValueEditor.tsx
apps/desktop/src/features/collections/components/: CollectionItem.tsx  CollectionTree.tsx  CollectionsSidebar.tsx  CreateCollectionDialog.tsx
apps/desktop/src/features/collections/store/: collections.store.test.ts  collections.store.ts
apps/desktop/src/lib/: ipc-client.ts
apps/desktop/src/styles/: globals.css
(+33 files in other folders)
