[package]
name = "reqtor-desktop"
version = "0.5.0"
description = "Reqtor - API Development Environment"
authors = ["Reqtor Team"]
license = "MIT"
edition = "2021"

[lib]
name = "reqtor_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v7"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hostname = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
